Removed isBlank() method which is in Java 8